--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="createVM"
-            type="com.example.e_commerce_route_c40.ui.activities.register.CreateAccountViewModel" />
+            type="com.example.e_commerce_route_c40.ui.fragments.register.CreateAccountViewModel" />
     </data>
 
     <ScrollView
