--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,21 +55,43 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:scrollbars="none"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:scrollbars="none"
             app:layout_constraintTop_toBottomOf="@id/til_search">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/tv_brands"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Brands"
+                    android:textColor="@color/main_tv_color"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toTopOf="@id/tv_brands"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_view_all_brands"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/viewAll"
+                    android:textColor="@color/main_tv_color"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_brands"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_brands" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_offers"
+                    android:id="@+id/rv_brands"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -78,8 +100,8 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:listitem="@layout/item_offers" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_brands"
+                    tools:listitem="@layout/item_brand" />
 
                 <TextView
                     android:id="@+id/tv_categories"
@@ -90,7 +112,7 @@
                     android:textColor="@color/main_tv_color"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rv_offers" />
+                    app:layout_constraintTop_toBottomOf="@id/rv_brands" />
 
                 <TextView
                     android:id="@+id/tv_view_all_categories"
@@ -122,7 +144,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/home_appliance"
+                    android:text="Most Saller"
                     android:textColor="@color/main_tv_color"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
