--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,11 @@
         <action
             android:id="@+id/action_homeFragment_to_productsFragment"
             app:destination="@id/productsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_categoryFragment"
+            app:destination="@id/categoryFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/categoryFragment"
@@ -33,6 +38,11 @@
             app:destination="@id/productsFragment"
             app:popUpTo="@id/categoryFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="category"
+            android:defaultValue="@null"
+            app:argType="com.route.domain.model.Category"
+            app:nullable="true" />
 
     </fragment>
     <fragment
@@ -55,10 +65,14 @@
             android:defaultValue="@null"
             app:argType="com.route.domain.model.SubCategory"
             app:nullable="true" />
+        <argument
+            android:name="category"
+            android:defaultValue="@null"
+            app:argType="com.route.domain.model.Category"
+            app:nullable="true" />
         <action
             android:id="@+id/action_productsFragment_to_categoryFragment"
             app:destination="@id/categoryFragment"
-
             />
 
     </fragment>
