--- a/app/src/main/res/menu/home_navigation_menu.xml
+++ b/app/src/main/res/menu/home_navigation_menu.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_home"
-        android:title="@string/profile" />
+        android:icon="@drawable/baseline_home"
+        android:title="@string/home" />
 
     <item
         android:id="@+id/categoryFragment"
-        android:icon="@drawable/ic_category"
-        android:title="@string/profile" />
+        android:icon="@drawable/baseline_category"
+        android:title="@string/category" />
 
     <item
         android:id="@+id/favoriteFragment"
-        android:icon="@drawable/ic_favorite"
-        android:title="@string/profile" />
+        android:icon="@drawable/baseline_favorite_border"
+        android:title="@string/favorite" />
 
     <item
         android:id="@+id/profileFragment"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/baseline_person"
         android:title="@string/profile" />
 
 
