--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.ProductDetailsFragment">
+    tools:context=".ui.fragments.SpecificProduct.ProductDetailsFragment">
 
     <ImageView
             android:id="@+id/ProductImage"
