--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
                 android:hint="@string/search_hint" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btn_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -154,13 +154,14 @@
                     android:id="@+id/rv_home_appliance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="8dp"
                     android:orientation="horizontal"
                     android:scrollbars="none"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintEnd_toStartOf="@id/tv_most_seller"
                     app:layout_constraintStart_toEndOf="@id/tv_most_seller"
                     app:layout_constraintTop_toBottomOf="@id/tv_most_seller"
-                    tools:listitem="@layout/item_home_appliance" />
+                    tools:listitem="@layout/item_home_most_seller" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
