--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,11 @@
             app:destination="@id/categoryFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_homeFragment_to_productDetailsFragment"
+            app:destination="@id/productDetailsFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/categoryFragment"
@@ -112,13 +117,11 @@
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
-        android:name="com.example.e_commerce_route_c40.ui.fragments.SpecificProduct.ProductDetailsFragment"
+        android:name="com.example.e_commerce_route_c40.ui.fragments.productDetails.ProductDetailsFragment"
         android:label="fragment_product_details"
         tools:layout="@layout/fragment_product_details" >
         <argument
             android:name="id"
-            app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
+            app:argType="string" />
     </fragment>
 </navigation>
