--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,9 @@
     <action
         android:id="@+id/action_global_to_home_screen"
         app:destination="@id/homeFragment" />
+    <action
+        android:id="@+id/action_global_to_cart_screen"
+        app:destination="@id/cartFragment" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.e_commerce_route_c40.ui.fragments.home.HomeFragment"
@@ -31,6 +34,12 @@
             app:destination="@id/productDetailsFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_homeFragment_to_cartFragment"
+            app:destination="@id/cartFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_blankFragment"
+            app:destination="@id/blankFragment" />
     </fragment>
     <fragment
         android:id="@+id/categoryFragment"
@@ -104,8 +113,9 @@
     <fragment
         android:id="@+id/splashScreen"
         android:name="com.example.e_commerce_route_c40.ui.fragments.splash.SplashScreen"
-        android:label="SplashScreen"
-        />
+        android:label="SplashScreen">
+
+    </fragment>
     <fragment
         android:id="@+id/createAccount"
         android:name="com.example.e_commerce_route_c40.ui.fragments.register.CreateAccount"
@@ -124,4 +134,14 @@
             android:name="id"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="com.example.e_commerce_route_c40.ui.fragments.cart.CartFragment"
+        android:label="CartFragment"
+        tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/blankFragment"
+        android:name="com.example.e_commerce_route_c40.ui.fragments.BlankFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_blank" />
 </navigation>
