--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -58,9 +58,15 @@
             android:src="@drawable/ic_cart" />
     </LinearLayout>
 
-    <!-- Recycler View for Cart Items -->
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/cart_recycler_view"
+        app:layout_constraintEnd_toEndOf="@id/cart_recycler_view"
+        app:layout_constraintStart_toStartOf="@id/cart_recycler_view"
+        app:layout_constraintTop_toTopOf="@id/cart_recycler_view" />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cart_recycler_viewe"
+        android:id="@+id/cart_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
@@ -80,7 +86,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cart_recycler_viewe">
+        app:layout_constraintTop_toBottomOf="@+id/cart_recycler_view">
 
         <!-- Total Price Section -->
         <LinearLayout
