--- a/app/src/main/res/layout/item_product_favorite.xml
+++ b/app/src/main/res/layout/item_product_favorite.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -109,7 +108,8 @@
             android:orientation="vertical"
             android:gravity="center_vertical">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ic_favorite"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/heart_favorite_screen"
