--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,19 +36,15 @@
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_homeFragment_to_cartFragment"
-            app:destination="@id/cartFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_blankFragment"
-            app:destination="@id/blankFragment" />
+            app:destination="@id/cartFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/categoryFragment"
         android:name="com.example.e_commerce_route_c40.ui.fragments.category.CategoryFragment"
         android:label="fragment_category"
         tools:layout="@layout/fragment_category">
-        <!--        <action-->
-        <!--            android:id="@+id/action_categoryFragment_to_productsFragment"-->
-        <!--            app:destination="@id/productsFragment" />-->
         <action
             android:id="@+id/action_categoryFragment_to_productsFragment"
             app:destination="@id/productsFragment"
@@ -139,9 +135,5 @@
         android:name="com.example.e_commerce_route_c40.ui.fragments.cart.CartFragment"
         android:label="CartFragment"
         tools:layout="@layout/fragment_cart" />
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.e_commerce_route_c40.ui.fragments.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
+
 </navigation>
