--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -43,17 +43,6 @@
                 android:text="Cart"
                 android:textColor="#06004F"
                 android:textSize="20sp" />
-
-            <!-- Search Button -->
-            <ImageButton
-                android:id="@+id/search_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="Search"
-                android:src="@drawable/ic_search" />
-
             <!-- Shopping Cart Button -->
             <ImageButton
                 android:id="@+id/clean_cart"
@@ -61,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:contentDescription="Shopping cart"
-                android:src="@drawable/ic_cart" />
+                android:src="@drawable/baseline_delete" />
         </LinearLayout>
 
         <ScrollView
