--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -43,6 +43,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nike Air Jordan"
+                    android:maxLines="1"
                     android:textColor="#06004F"
                     android:textSize="16sp"
                     android:textStyle="bold" />
