--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -25,13 +25,14 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <com.google.android.material.textfield.TextInputEditText
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="4dp"
                 android:hint="@string/search_hint"
+                android:queryHint="Search products..."
                 android:inputType="text"
                 android:maxLines="1"
                 android:imeOptions="actionSearch"
