Feat\animate recyclerViews

--- a/app/src/main/res/anim/full_down.xml
+++ b/app/src/main/res/anim/full_down.xml
@@ -8,6 +8,8 @@
 
     <translate
         android:duration="400"
-        android:fromXDelta="100%"
-        android:toXDelta="0%" />
+        android:fromYDelta="-200%"
+        android:toYDelta="0%" />
+
+
 </set>
