--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,10 +50,11 @@
             app:destination="@id/productsFragment"
             app:popUpTo="@id/categoryFragment"
             app:popUpToInclusive="true" />
+
         <argument
             android:name="category"
-            android:defaultValue="@null"
             app:argType="com.route.domain.model.Category"
+            android:defaultValue="@null"
             app:nullable="true" />
 
     </fragment>
@@ -83,10 +84,6 @@
             app:argType="com.route.domain.model.Category"
             app:nullable="true" />
         <action
-            android:id="@+id/action_productsFragment_to_categoryFragment"
-            app:destination="@id/categoryFragment"
-            />
-        <action
             android:id="@+id/action_productsFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment" />
         <argument
@@ -94,6 +91,11 @@
             android:defaultValue="@null"
             app:argType="com.route.domain.model.Brand"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_productsFragment_to_cartFragment"
+            app:destination="@id/cartFragment"
+            app:popUpTo="@id/productsFragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
     <fragment
