--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -16,11 +16,10 @@
             android:layout_height="match_parent"
             tools:context=".ui.fragments.productDetails.ProductDetailsFragment">
 
-            <ImageView
-                android:id="@+id/ProductImage"
-                android:layout_width="398dp"
-                android:layout_height="250dp"
-                android:scaleType="fitXY"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ProductImages"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
