--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -43,6 +43,7 @@
                 android:layout_marginTop="18dp"
                 android:textColor="#06004F"
                 android:textSize="18sp"
+                android:maxLength="35"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/ProductImages"
                 app:layout_constraintTop_toBottomOf="@id/ProductImages"
@@ -78,11 +79,12 @@
                 android:id="@+id/star_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
-                android:layout_marginEnd="16dp"
+                android:layout_margin="12dp"
                 android:src="@drawable/baseline_star_24"
-                app:layout_constraintStart_toEndOf="@id/tv_title"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
+                app:layout_constraintBottom_toTopOf="@+id/tv_description_details"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                app:layout_constraintStart_toEndOf="@+id/Tv_How_Many_Sold"
+                app:layout_constraintTop_toBottomOf="@+id/ProductImages" />
 
             <TextView
                 android:id="@+id/tv_rating"
@@ -98,6 +100,7 @@
 
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="16dp"
