--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
     <action
         android:id="@+id/action_global_to_cart_screen"
         app:destination="@id/cartFragment" />
+    <action
+        android:id="@+id/action_global_to_products_screen"
+        app:destination="@id/productsFragment" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.e_commerce_route_c40.ui.fragments.home.HomeFragment"
@@ -51,10 +54,8 @@
             app:popUpTo="@id/categoryFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="category"
-            android:defaultValue="@null"
-            app:argType="com.route.domain.model.Category"
-            app:nullable="true" />
+            android:name="id"
+            app:argType="string" />
 
     </fragment>
     <fragment
@@ -94,6 +95,11 @@
             android:defaultValue="@null"
             app:argType="com.route.domain.model.Brand"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_productsFragment_to_cartFragment"
+            app:destination="@id/cartFragment"
+            app:popUpTo="@id/productsFragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
     <fragment
