Feat\fix selected category

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -55,6 +55,10 @@
             android:defaultValue="@null"
             app:argType="com.route.domain.model.Category"
             app:nullable="true" />
+        <argument
+            android:name="SeletedPos"
+            android:defaultValue="0"
+            app:argType="integer" />
 
     </fragment>
     <fragment
